# HZMath.github.io

./: .gitignore  CONTRIBUTING.md  README.md  netlify.toml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: email_contribution.md  feature.md
.github/workflows/: ci.yml
archetypes/: contest.md  course.md  courses.md  default.md  notification.md  post.md
config/_default/: config.toml  params.toml  permalinks.toml
content/categories/FDH/: _index.md
content/page/links/: index.md
content/post/articles/: derange-derivation.md
content/post/articles/cute/: josephus.md  wrongarrange.md
content/post/courses/calculus/indefinite-integral/: answer.md  index.md
content/post/courses/inverse-tri-func/: index.md
content/post/exam-papers/2025高一竞赛/: answer.md  paper.md
content/post/exam/2026九校联考/高二/: coms.md
content/post/exam/2026九校联考/高二/answer/: index.md
content/post/exam/2026九校联考/高二/paper/: index.md
content/post/exam/2026九校联考/高二答案/: index.md
content/post/exam/2026九校联考/高二试卷/: index.md
content/post/exam/2026佛山二模/T11/: index.md
content/post/exam/2026佛山二模/T14/: index.md
scripts/: clean.py  install-hugo.sh  new.bat
scripts/ci/: gh_cli.py  main.py  utils.py
scripts/common/: constants.py  logger.py
